--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -52,6 +52,20 @@ before.
 Programs
 ========
 
+Environment variables
+---------------------
+
+The environment variable URBI_ROOT denotes the directory which is the
+root of the tree into which Urbi was installed.  It corresponds to the
+"prefix" in GNU Autoconf parlance, and defaults to "/usr/local" under
+Unix.  UrbiScript library files are expected to be in
+<URBI_ROOT>/share/gostai/urbi.
+
+The environment variable URBI_PATH, which allows to specify a
+colon-separated list of directories into which UrbiScript files are
+looked-up, may extend or override URBI_ROOT.  Any superfluous colon
+denotes the place where the URBI_ROOT path is taked into account.
+
 Scripting
 ---------
 
