--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -2138,14 +2138,14 @@ var myEvent = Event.new;
 whenever (?myEvent)
 {
   echo("ping")|
-  sleep(250ms)
+  sleep(100ms)
 };
 // Emit myEvent for one second.
-emit myEvent ~ 1s;
+emit myEvent ~ 350ms;
 [00000000] *** ping
-[00000250] *** ping
-[00000500] *** ping
-[00000750] *** ping
+[00000100] *** ping
+[00000200] *** ping
+[00000300] *** ping
 /*HIDE*/sleep(125ms);
 \end{urbiscript}
 
