--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -86,6 +86,18 @@ write simple batch Urbi programs.  For instance:
         [00000004:output] ["1", "2", "3"]
 
 
+urbi-console
+------------
+
+urbi-console is now a simple wrapper around urbi-launch.  Running
+
+        urbi-console arg1 arg2...
+
+is equivalent to running
+
+        urbi-launch --start -- arg1 arg2...
+
+
 Auxiliary programs
 ------------------
 
