--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,17 @@ This file summarizes the user-visible changes since the first beta 1
 release.
 
 *******************************
+* New since kernel 2.0 beta 4 *
+*******************************
+
+Auxiliary programs
+==================
+
+urbi-send no longer displays the server version banner, unless given
+-b/--banner.
+
+
+*******************************
 * New since kernel 2.0 beta 3 *
 *******************************
 
