--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -19,28 +19,29 @@
 %% ---------- %%
 %% SHORTHANDS %%
 %% ---------- %%
+
 \newcommand{\ai}{AI\xspace}
 \newcommand{\api}{API\xspace}
 \newcommand{\caml}{Caml\xspace}
 \newcommand{\io}{Io\xspace}
 \newcommand{\java}{Java\xspace}
 \newcommand{\js}{JavaScript\xspace}
-\newcommand{\lua}{Lua}
-\newcommand{\lisp}{Lisp}
+\newcommand{\lisp}{Lisp\xspace}
+\newcommand{\lua}{Lua\xspace}
 \newcommand{\matlab}{MatLab\xspace}
 \newcommand{\pascal}{PASCAL\xspace}
 \newcommand{\python}{Python\xspace}
 \newcommand{\ruby}{Ruby\xspace}
 \newcommand{\sdk}{SDK\xspace}
-\newcommand{\urbi}{Urbi\xspace}
 \newcommand{\umake}{umake\xspace}
+\newcommand{\urbi}{Urbi\xspace}
 \newcommand{\us}{UrbiScript\xspace}
 
 %% ------ %%
 %% FLOATS %%
 %% ------ %%
 
-% % This version tries to either put floats HERE, or regroup them on pages
+%% This version tries to either put floats HERE, or regroup them on pages
 
 % \newcommand   {\floatpos}          {htbp}
 % \newcommand   {\floatposh}         {htbp}
@@ -94,6 +95,39 @@
 % This is so that code examples use a small font.
 \lstnewenvironment{urbiscript}[1][]
   {\lstset{language=[interactive]urbi,
+      basicstyle=\ttfamily\footnotesize,
+      float=\floatposh,
+      #1}}
+  {}
+
+\lstdefinelanguage[]{Shell}%
+{%
+  morekeywords={%
+    case,%
+    do,%
+    done,%
+    elif,%
+    else,%
+    esac,%
+    exit,%
+    expr,%
+    fi,%
+    for,%
+    if,%
+    local,%
+    return,%
+    test,%
+    then,%
+    while%
+  },%
+  otherkeywords=[2]{\&},
+  sensitive=true,%
+  morecomment=[l]{\#},%
+  morestring=[b]{"}%
+}[keywords,comments,strings]%
+
+\lstnewenvironment{shell}[1][]
+  {\lstset{language=Shell,
       basicstyle=\ttfamily\footnotesize,
       float=\floatposh,
       #1}}
