--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -11,6 +11,11 @@ Auxiliary programs
 urbi-send no longer displays the server version banner, unless given
 -b/--banner.
 
+Various bug fixes
+=================
+
+Under some circumstances successful runs could report "at job handler
+exited with exception TerminateException".  This is fixed.
 
 *******************************
 * New since kernel 2.0 beta 3 *
