--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -5,7 +5,12 @@
 %% -------- %%
 %% PACKAGES %%
 %% -------- %%
-\RequirePackage{a4wide}
+
+% Margin width chosen so that 80 columns are displayed in listings.
+% This is needed to display nicely the banner of UrbiScript
+% interactive sessions.
+\RequirePackage[a4paper,hmargin=2.5cm]{geometry}
+
 \RequirePackage{afterpage}
 \RequirePackage{graphicx}
 \RequirePackage[utf8]{inputenc}
