doc: move FAQ.txt into the tutorial.
	* doc/urbi-report.sty (urbifixme): New environment.
	* doc/tutorial/urbi-tutorial.tex (FAQ): Move most of the FAQ.txt
	contents in here.
	* doc/specs/urbi-specs.tex: Use book.cls.

--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -1,4 +1,4 @@
-\documentclass[openright,twoside,11pt]{report}
+\documentclass[openright,twoside,11pt]{book}
   % Index.  Must be before loading hyperref.
   \usepackage{myindex}
   \usepackage{index}
@@ -76,7 +76,7 @@ This document structured as follows:
 \label{sec:sdk}
 
 \clearpage
-\phantomsection % sinon hyperliens vers chapitre précédent.
+\phantomsection % otherwise hyperlinks to previous chapter.
 \addcontentsline{toc}{chapter}{\indexname}
 \printindex
 
