urbi.u: System.Platform.
	* share/urbi/platform.u.in, share/urbi/system.u: New.
	* configure.ac: Configure platform.u.
	* doc/specs/stdlib.tex, doc/RELEASE-NOTES.txt: Doc it.
	* share/urbi/local.mk: Adjust.
	* share/urbi/urbi.u: load system.u.
	* src/object/system.cc (platform): Remove, replaced by
	urbi/platform.u.
	* tests: Update.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -13,6 +13,14 @@ urbi-send no longer displays the server version banner, unless given
 
 urbi-console.bat should now work out of the box under windows.
 
+
+System.Platform
+===============
+
+System.Platform enhances System.platform.  Use System.Platform.kind
+instead of System.platform.
+
+
 Various bug fixes
 =================
 
@@ -21,6 +29,7 @@ exited with exception TerminateException".  This is fixed.
 
 Using waituntil on an event with no payload (ie: waituntil(?e) ...;)
 will not cause an internal error anymore.
+
 
 *******************************
 * New since kernel 2.0 beta 3 *
