--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -142,6 +142,17 @@ and call messages. See example with call messages in
 \section{Pattern}
 \section{Primitive}
 \section{String}
+
+\section{System}
+
+\section{System.Platform}
+
+A description of the platform (the computer) the server is running on.
+\subsection{Slots}
+
+\subsubsection{kind}
+Either \code{"POSIX"} or \code{"WIN32"}.
+
 \section{Tag}
 \section{Tuple}
 \section{void}
