--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -135,7 +135,7 @@ simple quotes (\lstinline|'|), as shown in
     \lstinline"stopif"            &                                         \\
     \lstinline"else"              &                                         &
     \lstinline"struct"            & Unused                                  \\
-    \lstinline"emit"              &                                         &
+    \lstinline"emit"              & Deprecated                              &
     \lstinline"switch"            &                                         \\
     \lstinline"enum"              & Unused                                  &
     \lstinline"template"          & Unused                                  \\
